tenant-multiple-namespaces-ksvc/config/tenant2-ns1/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant2-ns1
  annotations:
    serving.knative.dev/tenant: tenant2
    serving.knative.dev/tenant-port: "8083"
