tenant-multiple-namespaces-ksvc/config/tenant2-ns1/ping.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ping
  namespace: tenant2-ns1
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "1"
    spec:
      containers:
        - image: docker.io/villardl/ping
          env:
            - name: TARGET
              value: "http://pong.tenant2-ns1"
