tenant-multiple-namespaces-ksvc/config/tenant2-ns1/allow-all-in-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-in-ns
  namespace: tenant2-ns1
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: tenant2-ns1
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: tenant2-ns1
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Ingress
    - Egress
