tenant-multiple-namespaces-ksvc/config/tenant2-ns1/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: tenant2-ns1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
